update to Java11 (#21)
* update to Java11, update all libraries
combine modules for Spring support
move from springfox to springdoc-openapi
simplify tests ad avoid loading spring context

* Update .travis.yml

* Update LICENSE

* add unit test

* fix typo

* remove unused spring test config

* fix spelling

Co-authored-by: bitgrip-user <42266358+bitgrip-user@users.noreply.github.com>